exam02/0-0-hello.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z3r4p1.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Jan 24 18:15:31 PST 2020
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2020/piscine-c-exam02/exam_20200125/tri

= Git history ==================================================================
$> git -C /var/folders/f1/tq713t053t95sccdmsvvlm4h0000gp/T/tmp8TCaLX/user log --pretty='%H - %an, %ad : %s'
314f2707c69995c8706f2fddba16f82aa499b7a9 - Exam 42, Fri Jan 24 18:13:01 2020 -0800 : 0-0
 
= Collected files ==========================================
$> ls -lAR /var/folders/f1/tq713t053t95sccdmsvvlm4h0000gp/T/tmp8TCaLX/user
total 8
-rw-r--r--  1 deepthought  deepthought  208 Jan 24 18:15 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jan 24 18:15 hello

/var/folders/f1/tq713t053t95sccdmsvvlm4h0000gp/T/tmp8TCaLX/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  966 Jan 24 18:15 hello.c
 
= hello ========================================================================
$> gcc -Wextra -Wall -Werror hello.c -o user_exe 
hello.c:15:1: error: return type of 'main' is not 'int' [-Werror,-Wmain-return-type]
void    main(void)
^
hello.c:15:1: note: change return type to 'int'
void    main(void)
^~~~
int
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
